# tsef

./: Cargo.toml  LICENSE  README.md  main
src/: ansi_state_machine.rs  lib.rs  main.rs  simple_state_machine.rs
tests/: mod.rs  test_ansi_state_machine.rs  test_cli_integration.rs  test_edge_cases.rs  test_path_matching.rs  test_simple_state_machine.rs
tests/data/: ansi_tsc_output.txt  simple_tsc_output.txt
